# COF-Landscaper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: publish_release.yaml  tests.yaml
docs/readme/: USAGE.md  export_usage_pdf.sh
docs/source/: conf.py  index.rst  modules.rst
docs/source/_templates/: module.rst
examples/0_all/: cof-landscaper.ipynb
examples/0_all/0_linker/: 2-Benzene.xyz  Imidazol.xyz
examples/0_all/0_node/: HCB.xyz  boronate_ester.xyz
examples/1_construct_cof/: construct_cof.ipynb
examples/1_construct_cof/cofs_ild/: boronate_ester_2-Benzene_z30.cif  boronate_ester_2-Benzene_z31.cif  boronate_ester_2-Benzene_z32.cif  boronate_ester_2-Benzene_z33.cif  boronate_ester_2-Benzene_z34.cif  boronate_ester_2-Benzene_z35.cif  boronate_ester_2-Benzene_z36.cif  boronate_ester_2-Benzene_z37.cif  boronate_ester_2-Benzene_z38.cif  boronate_ester_2-Benzene_z39.cif  boronate_ester_2-Benzene_z40.cif  boronate_ester_2-Benzene_z41.cif  boronate_ester_2-Benzene_z42.cif  boronate_ester_2-Benzene_z43.cif  boronate_ester_2-Benzene_z44.cif  boronate_ester_2-Benzene_z45.cif
examples/1_construct_cof/cofs_incl/: boronate_ester_2-Benzene_z30_inc_L120.cif  boronate_ester_2-Benzene_z30_inc_L130.cif  boronate_ester_2-Benzene_z30_inc_L140.cif  boronate_ester_2-Benzene_z30_inc_L150.cif  boronate_ester_2-Benzene_z30_inc_L158.cif  boronate_ester_2-Benzene_z31_inc_L120.cif  boronate_ester_2-Benzene_z31_inc_L130.cif  boronate_ester_2-Benzene_z31_inc_L140.cif  boronate_ester_2-Benzene_z31_inc_L150.cif  boronate_ester_2-Benzene_z31_inc_L158.cif  boronate_ester_2-Benzene_z32_inc_L120.cif  boronate_ester_2-Benzene_z32_inc_L130.cif  boronate_ester_2-Benzene_z32_inc_L140.cif  boronate_ester_2-Benzene_z32_inc_L150.cif  boronate_ester_2-Benzene_z32_inc_L158.cif  boronate_ester_2-Benzene_z33_inc_L120.cif  boronate_ester_2-Benzene_z33_inc_L130.cif  boronate_ester_2-Benzene_z33_inc_L140.cif  boronate_ester_2-Benzene_z33_inc_L150.cif  boronate_ester_2-Benzene_z33_inc_L158.cif  boronate_ester_2-Benzene_z34_inc_L120.cif  boronate_ester_2-Benzene_z34_inc_L130.cif  boronate_ester_2-Benzene_z34_inc_L140.cif  boronate_ester_2-Benzene_z34_inc_L150.cif  boronate_ester_2-Benzene_z34_inc_L158.cif  boronate_ester_2-Benzene_z35_inc_L120.cif  boronate_ester_2-Benzene_z35_inc_L130.cif  boronate_ester_2-Benzene_z35_inc_L140.cif  boronate_ester_2-Benzene_z35_inc_L150.cif  boronate_ester_2-Benzene_z35_inc_L158.cif  boronate_ester_2-Benzene_z36_inc_L120.cif  boronate_ester_2-Benzene_z36_inc_L130.cif  boronate_ester_2-Benzene_z36_inc_L140.cif  boronate_ester_2-Benzene_z36_inc_L150.cif  boronate_ester_2-Benzene_z36_inc_L158.cif  boronate_ester_2-Benzene_z37_inc_L120.cif  boronate_ester_2-Benzene_z37_inc_L130.cif  boronate_ester_2-Benzene_z37_inc_L140.cif  boronate_ester_2-Benzene_z37_inc_L150.cif  boronate_ester_2-Benzene_z37_inc_L158.cif  (+40 more)
examples/1_construct_cof/cofs_preopt/: boronate_ester_2-Benzene.cif
examples/1_construct_cof/cofs_rm/: boronate_ester_2-Benzene_z30_ser_L106_rm_z750_t100.cif  boronate_ester_2-Benzene_z39_ser_L090_rm_z750_t100.cif
examples/1_construct_cof/cofs_serr/: boronate_ester_2-Benzene_z30_ser_L090.cif  boronate_ester_2-Benzene_z30_ser_L100.cif  boronate_ester_2-Benzene_z30_ser_L106.cif  boronate_ester_2-Benzene_z31_ser_L090.cif  boronate_ester_2-Benzene_z31_ser_L100.cif  boronate_ester_2-Benzene_z31_ser_L106.cif  boronate_ester_2-Benzene_z32_ser_L090.cif  boronate_ester_2-Benzene_z32_ser_L100.cif  boronate_ester_2-Benzene_z32_ser_L106.cif  boronate_ester_2-Benzene_z33_ser_L090.cif  boronate_ester_2-Benzene_z33_ser_L100.cif  boronate_ester_2-Benzene_z33_ser_L106.cif  boronate_ester_2-Benzene_z34_ser_L090.cif  boronate_ester_2-Benzene_z34_ser_L100.cif  boronate_ester_2-Benzene_z34_ser_L106.cif  boronate_ester_2-Benzene_z35_ser_L090.cif  boronate_ester_2-Benzene_z35_ser_L100.cif  boronate_ester_2-Benzene_z35_ser_L106.cif  boronate_ester_2-Benzene_z36_ser_L090.cif  boronate_ester_2-Benzene_z36_ser_L100.cif  boronate_ester_2-Benzene_z36_ser_L106.cif  boronate_ester_2-Benzene_z37_ser_L090.cif  boronate_ester_2-Benzene_z37_ser_L100.cif  boronate_ester_2-Benzene_z37_ser_L106.cif  boronate_ester_2-Benzene_z38_ser_L090.cif  boronate_ester_2-Benzene_z38_ser_L100.cif  boronate_ester_2-Benzene_z38_ser_L106.cif  boronate_ester_2-Benzene_z39_ser_L090.cif  boronate_ester_2-Benzene_z39_ser_L100.cif  boronate_ester_2-Benzene_z39_ser_L106.cif  boronate_ester_2-Benzene_z40_ser_L090.cif  boronate_ester_2-Benzene_z40_ser_L100.cif  boronate_ester_2-Benzene_z40_ser_L106.cif  boronate_ester_2-Benzene_z41_ser_L090.cif  boronate_ester_2-Benzene_z41_ser_L100.cif  boronate_ester_2-Benzene_z41_ser_L106.cif  boronate_ester_2-Benzene_z42_ser_L090.cif  boronate_ester_2-Benzene_z42_ser_L100.cif  boronate_ester_2-Benzene_z42_ser_L106.cif  boronate_ester_2-Benzene_z43_ser_L090.cif  (+8 more)
examples/1_construct_cof/cofs_supercell/: boronate_ester_2-Benzene_vacuum_100_centered_supercell_2x2x2.cif
examples/1_construct_cof/nodes/: boronate_ester.xyz
examples/1_construct_cof/raw_cofs/: boronate_ester_2-Benzene.cif
examples/COF-1/0_all/: cof-landscaper.ipynb
examples/COF-1/1_mace_full/: cof-landscaper.ipynb
examples/COF-1/2_mace_simple/: cof-landscaper.ipynb
examples/COF-1/3_crystal/: cof-landscaper.ipynb
examples/COF-1/4_vasp/: cof-landscaper.ipynb
examples/hybrid/: cof-landscaper.ipynb  cof-landscaper.params.json  cof-landscaper.py
examples/notebook/: cof-landscaper.ipynb  cof-landscaper_configurable.ipynb  cof-landscaper_default.ipynb  cof-landscaper_minimal.ipynb  cof-landscaper_minimal_minimal.ipynb
examples/python/: cof-landscaper.ipynb  cof-landscaper.params.json  cof-landscaper.py
src/coflandscaper/: __init__.py
src/gs/: __init__.py
tests/: conftest.py  test_analyze_contracts.py  test_buildcof2d.py  test_buildcof2d_utils.py  test_dft_parsing.py  test_foo.py  test_helpers_transforms.py  test_ild_ils_matrix.py  test_ild_ils_utils.py  test_landscape_routing.py  test_mace_opt_contracts.py  test_pxrd_routing.py  test_select_cofs_minima_mode.py
(+7346 files in other folders)
