[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cof-landscaper"
maintainers = [
  { name = "Gregor Lauter", email = "gregor.lauter@gmx.de" },
]

dependencies = [
    "ase>=3.27.0",
    "mace-torch>=0.3.14",
    "numpy<2.0",
    "pormake>=0.2.2",
    "py3dmol>=2.5.4",
    "rdkit>=2025.9.3",
    "torch-dftd>=0.5.2",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]
requires-python = "==3.12.*"
dynamic = ["version"]
readme = "README.rst"
description = "Does things for you."

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "furo",
]

[project.urls]
github = "https://github.com/GregorLauter/COF-Landscaper"
documentation = "https://github.com/GregorLauter/COF-Landscaper"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
]
"examples/*" = [
  "INP001",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
