[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cof-landscaper"
maintainers = [
  { name = "Gregor Lauter", email = "gregor.lauter@gmx.de" },
]

dependencies = [
    "ase>=3.27.0",
    "mace-torch>=0.3.15",
    "numpy<2.0",
    "pormake>=0.2.2",
    "py3dmol>=2.5.4",
    "rdkit>=2025.9.3",
    "torch-dftd>=0.5.2",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]
requires-python = "==3.12.*"
dynamic = ["version"]
readme = "README.rst"
description = "Does things for you."

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "furo",
]

[project.urls]
github = "https://github.com/GregorLauter/COF-Landscaper"
documentation = "https://github.com/GregorLauter/COF-Landscaper"

[tool.setuptools_scm]

[tool.setuptools.package-data]
coflandscaper = [
  "database/topologies/*.cgd",
  "database/topologies/*.pickle",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN001",
  "ANN003",
  "ANN202",
  "ANN205",
  "ANN401",
  "BLE001",
  "C901",
  "COM812",
  "D417",
  "E501",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "ISC001",
  "N802",
  "N806",
  "PTH103",
  "PTH107",
  "PTH110",
  "PTH118",
  "PTH119",
  "PTH122",
  "PTH123",
  "PTH207",
  "PTH208",
  "PLC0415",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "RUF002",
  "S110",
  "S112",
  "SLF001",
  "TC002",
  "TC003",
  "T201",
  "TRY300",
  "TRY301",
  "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "INP001",
]
"examples/*" = [
  "INP001",
]
"docs/source/conf.py" = ["D100", "INP001"]

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_unreachable = true
disallow_any_generics = false
ignore_missing_imports = true
disable_error_code = ["override", "assignment", "unreachable"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
